# jvol-rust

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  benchmark.py  index.html  mise.toml  mkdocs.yml  pyproject.toml  search.json  sitemap.xml
.github/workflows/: ci.yml  docs-preview.yml  docs.yml  release.yml
algorithm/: index.html
benchmark/: index.html
cli/: index.html
docs/: algorithm.md  benchmark.md  cli.md  getting-started.md  index.md
getting-started/: index.html
python/jvol/: __init__.py  cli.py
python/jvol/libjvol_rust.dylib.dSYM/Contents/: Info.plist
python/jvol/libjvol_rust.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libjvol_rust.dylib.yml
src/: cli.rs  decoding.rs  encoding.rs  entropy.rs  io.rs  lib.rs  main.rs  python.rs  quantization.rs  subbands.rs  types.rs  wavelet.rs
