[package]
name = "jvol-rust"
version = "0.2.0"
edition = "2021"
description = "Lightning-fast wavelet compression for 3D medical images"
license = "MIT"
repository = "https://github.com/fepegar/jvol-rust"

[lib]
name = "jvol_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
ndarray = "0.15"
nifti = "0.15"
clap = { version = "4", features = ["derive"] }
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
flate2 = "1"
byteorder = "1"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[profile.release]
opt-level = 3
lto = true
