[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jvol"
version = "0.1.0"
description = "Lightning-fast JPEG-like compression for 3D medical images"
readme = "docs/index.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["numpy"]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "jvol._jvol_rust"
